# scaffolding-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README user registration.md  README.md  alembic.ini  api_gw.tf  db_initialization.py  main.py  networking_infra.tf  pyproject.toml  setup.cfg  tiny_relappmidos.py
alembic/: env.py
alembic/versions/: 473c3d561747_add_2_default_users.py  6566cfcce236_properly_define_users_tale.py  a3b59171f2ce_add_email_and_remove_password.py
alembic_scripts/versions/: 424a70a7975f_add_email_to_user_mandatory_field.py  6566cfcce236_properly_define_users_tale.py  cc9e9b49c031_add_catpcha_table.py
authentication/: authentication.py  captcha_lib.py  jwt.py  user_context.py  users.py
config/: conf.py  connectivity.py
database/: connection_details.py  db_initialization.py  db_reload_changes.py  models.py
infra/: api_gw.tf  main.tf  networking_infra.tf  rds_infra.tf  variables.tf
routes/: auth.py  google_auth.py  user.py
static/: env.js  index.html  local_and_google_registration.html  local_registration.html  login.js  test.js  ui.js
use_cases/: create_user.py
