
[tool.poetry]
name = "relappmidos-backend"
version = "0.1.0"
description = "relappmidos-backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11 < 3.12"
fastapi = "^0.115.0"
mangum = "^0.19.0"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["pbkdf2-sha256"], version = "^1.7.4"}
boto3 = "^1.36.2"
pydantic = "^2.0"
sqlmodel = "^0.0.24"
alembic = "^1.16.2"
fastapi-limiter = "^0.1.6"

[tool.poetry.dev-dependencies]
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1.1"
ipykernel = "^6.29.5"
openapi-spec-validator = "^0.7.1"

[tool.poetry.group.debug.dependencies]
uvicorn = "^0.19.0"
bs4 = "^0.0.1"
requests = "^2.28.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
# alembic = "^1.13.3"


[tool.poetry.group.debug]
optional = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
